--- a/src/style/keyframes.css
+++ b/src/style/keyframes.css
@@ -3,10 +3,10 @@
 
     0%,
     100% {
-        text-shadow: 0 0 10px currentColor, 0 0 20px currentColor, 0 0 30px currentColor;
+        text-shadow: 0 0 10px currentColor, 0 0 15px currentColor, 0 0 20px currentColor;
     }
 
     50% {
-        text-shadow: 0 0 20px currentColor, 0 0 30px currentColor, 0 0 40px currentColor;
+        text-shadow: 0 0 20px currentColor, 0 0 25px currentColor, 0 0 30px currentColor;
     }
 }
